add support numbers to NER tester and update test NER notebook

--- a/notebooks/testing NER models.ipynb
+++ b/notebooks/testing NER models.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -30,6 +21,7 @@
     "\n",
     "from hc_nlp.io import load_text_and_annotations_from_labelstudio\n",
     "from hc_nlp.spacy_helpers import display_manual_annotations, display_ner_annotations\n",
+    "from hc_nlp.model_testing import test_ner\n",
     "\n",
     "# to download a model:\n",
     "# !python -m spacy download en_core_web_sm OR !python -m spacy download en_core_web_lg\n",
@@ -48,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,97 +60,95 @@
       "SMALL MODEL: \n",
       "{ 'ents_f': 43.70179948586118,\n",
       "  'ents_p': 36.976617727025555,\n",
-      "  'ents_per_type': { 'CARDINAL': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
-      "                     'DATE': { 'f': 72.55813953488374,\n",
+      "  'ents_per_type': { 'DATE': { 'f': 72.55813953488374,\n",
       "                               'p': 78.0,\n",
-      "                               'r': 67.82608695652173},\n",
-      "                     'EVENT': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
-      "                     'FAC': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
+      "                               'r': 67.82608695652173,\n",
+      "                               'support': 345},\n",
       "                     'GPE': { 'f': 68.51851851851852,\n",
       "                              'p': 68.51851851851852,\n",
-      "                              'r': 68.51851851851852},\n",
-      "                     'LANGUAGE': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
-      "                     'LOC': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
-      "                     'MONEY': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
-      "                     'NORP': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
-      "                     'ORDINAL': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
+      "                              'r': 68.51851851851852,\n",
+      "                              'support': 271},\n",
       "                     'ORG': { 'f': 43.42688330871492,\n",
       "                              'p': 38.68421052631579,\n",
-      "                              'r': 49.494949494949495},\n",
+      "                              'r': 49.494949494949495,\n",
+      "                              'support': 297},\n",
       "                     'PERSON': { 'f': 43.37349397590362,\n",
       "                                 'p': 34.177215189873415,\n",
-      "                                 'r': 59.34065934065934},\n",
+      "                                 'r': 59.34065934065934,\n",
+      "                                 'support': 182},\n",
       "                     'PRODUCT': { 'f': 5.405405405405405,\n",
       "                                  'p': 26.666666666666668,\n",
-      "                                  'r': 3.007518796992481},\n",
-      "                     'QUANTITY': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
-      "                     'TIME': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
+      "                                  'r': 3.007518796992481,\n",
+      "                                  'support': 133},\n",
       "                     'WORK_OF_ART': { 'f': 4.444444444444444,\n",
       "                                      'p': 4.545454545454546,\n",
-      "                                      'r': 4.3478260869565215}},\n",
-      "  'ents_r': 53.41712490180676}\n",
+      "                                      'r': 4.3478260869565215,\n",
+      "                                      'support': 46}},\n",
+      "  'ents_r': 53.41712490180676,\n",
+      "  'labels_missing_from_annotations': [ 'LOC',\n",
+      "                                       'EVENT',\n",
+      "                                       'NORP',\n",
+      "                                       'LANGUAGE',\n",
+      "                                       'CARDINAL',\n",
+      "                                       'TIME',\n",
+      "                                       'ORDINAL',\n",
+      "                                       'QUANTITY',\n",
+      "                                       'MONEY',\n",
+      "                                       'FAC'],\n",
+      "  'support': 1274}\n",
       "---\n",
       "LARGE MODEL: \n",
       "{ 'ents_f': 46.828652571789206,\n",
       "  'ents_p': 39.13502109704641,\n",
-      "  'ents_per_type': { 'CARDINAL': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
-      "                     'DATE': { 'f': 74.46808510638299,\n",
+      "  'ents_per_type': { 'DATE': { 'f': 74.46808510638299,\n",
       "                               'p': 78.27476038338658,\n",
-      "                               'r': 71.01449275362319},\n",
-      "                     'EVENT': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
-      "                     'FAC': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
+      "                               'r': 71.01449275362319,\n",
+      "                               'support': 345},\n",
       "                     'GPE': { 'f': 74.45255474452554,\n",
       "                              'p': 73.38129496402878,\n",
-      "                              'r': 75.55555555555556},\n",
-      "                     'LANGUAGE': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
-      "                     'LAW': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
-      "                     'LOC': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
-      "                     'MONEY': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
-      "                     'NORP': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
-      "                     'ORDINAL': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
+      "                              'r': 75.55555555555556,\n",
+      "                              'support': 271},\n",
       "                     'ORG': { 'f': 46.384720327421554,\n",
       "                              'p': 38.99082568807339,\n",
-      "                              'r': 57.23905723905723},\n",
-      "                     'PERCENT': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
+      "                              'r': 57.23905723905723,\n",
+      "                              'support': 297},\n",
       "                     'PERSON': { 'f': 52.19298245614035,\n",
       "                                 'p': 43.43065693430657,\n",
-      "                                 'r': 65.38461538461539},\n",
-      "                     'PRODUCT': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
-      "                     'QUANTITY': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
-      "                     'TIME': {'f': 0.0, 'p': 0.0, 'r': 0.0},\n",
+      "                                 'r': 65.38461538461539,\n",
+      "                                 'support': 182},\n",
+      "                     'PRODUCT': {'f': 0.0, 'p': 0.0, 'r': 0.0, 'support': 133},\n",
       "                     'WORK_OF_ART': { 'f': 8.98876404494382,\n",
       "                                      'p': 9.30232558139535,\n",
-      "                                      'r': 8.695652173913043}},\n",
-      "  'ents_r': 58.287509819324434}\n"
+      "                                      'r': 8.695652173913043,\n",
+      "                                      'support': 46}},\n",
+      "  'ents_r': 58.287509819324434,\n",
+      "  'labels_missing_from_annotations': [ 'LOC',\n",
+      "                                       'EVENT',\n",
+      "                                       'LAW',\n",
+      "                                       'NORP',\n",
+      "                                       'LANGUAGE',\n",
+      "                                       'CARDINAL',\n",
+      "                                       'PERCENT',\n",
+      "                                       'TIME',\n",
+      "                                       'ORDINAL',\n",
+      "                                       'QUANTITY',\n",
+      "                                       'MONEY',\n",
+      "                                       'FAC'],\n",
+      "  'support': 1274}\n"
      ]
     }
    ],
    "source": [
-    "def evaluate(ner_model, examples):\n",
-    "    scorer = Scorer()\n",
-    "    for input_, annot in examples:\n",
-    "        doc_gold_text = ner_model.make_doc(input_)\n",
-    "        gold = GoldParse(doc_gold_text, entities=annot)\n",
-    "        pred_value = ner_model(input_)\n",
-    "        scorer.score(pred_value, gold)\n",
-    "        \n",
-    "    entity_measures = ['ents_p', 'ents_r', 'ents_f', 'ents_per_type']\n",
-    "    all_results = scorer.scores\n",
-    "    \n",
-    "    return {k:all_results[k] for k in entity_measures}\n",
-    "\n",
-    "examples = [(text, annotations)]\n",
-    "\n",
     "print(\"SMALL MODEL: \")\n",
-    "pp.pprint(evaluate(nlp_sm, data))\n",
+    "pp.pprint(test_ner(nlp_sm, examples=data))\n",
     "print(\"---\")\n",
     "print(\"LARGE MODEL: \")\n",
-    "pp.pprint(evaluate(nlp_lg, data))"
+    "pp.pprint(test_ner(nlp_lg, examples=data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
