freedom in selecting relative path

--- a/notebooks/testing NER models.ipynb
+++ b/notebooks/testing NER models.ipynb
@@ -44,8 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = load_text_and_annotations_from_labelstudio(\"2020-11-25-17-28-58\", nlp_lg)\n",
-    "text, annotations = data[11]"
+    "data = load_text_and_annotations_from_labelstudio(\"../labelling/export/2020-11-25-17-28-58.zip\", nlp_lg)\n"
    ]
   },
   {
@@ -85,16 +84,16 @@
       "                                      'r': 4.3478260869565215,\n",
       "                                      'support': 46}},\n",
       "  'ents_r': 53.41712490180676,\n",
-      "  'labels_missing_from_annotations': [ 'LOC',\n",
-      "                                       'EVENT',\n",
-      "                                       'NORP',\n",
-      "                                       'LANGUAGE',\n",
-      "                                       'CARDINAL',\n",
-      "                                       'TIME',\n",
-      "                                       'ORDINAL',\n",
+      "  'labels_missing_from_annotations': [ 'TIME',\n",
       "                                       'QUANTITY',\n",
+      "                                       'ORDINAL',\n",
+      "                                       'EVENT',\n",
+      "                                       'LANGUAGE',\n",
       "                                       'MONEY',\n",
-      "                                       'FAC'],\n",
+      "                                       'LOC',\n",
+      "                                       'CARDINAL',\n",
+      "                                       'FAC',\n",
+      "                                       'NORP'],\n",
       "  'support': 1274}\n",
       "---\n",
       "LARGE MODEL: \n",
@@ -122,18 +121,18 @@
       "                                      'r': 8.695652173913043,\n",
       "                                      'support': 46}},\n",
       "  'ents_r': 58.287509819324434,\n",
-      "  'labels_missing_from_annotations': [ 'LOC',\n",
-      "                                       'EVENT',\n",
-      "                                       'LAW',\n",
-      "                                       'NORP',\n",
-      "                                       'LANGUAGE',\n",
-      "                                       'CARDINAL',\n",
-      "                                       'PERCENT',\n",
+      "  'labels_missing_from_annotations': [ 'CARDINAL',\n",
       "                                       'TIME',\n",
-      "                                       'ORDINAL',\n",
       "                                       'QUANTITY',\n",
+      "                                       'ORDINAL',\n",
+      "                                       'EVENT',\n",
+      "                                       'LANGUAGE',\n",
       "                                       'MONEY',\n",
-      "                                       'FAC'],\n",
+      "                                       'LAW',\n",
+      "                                       'PERCENT',\n",
+      "                                       'LOC',\n",
+      "                                       'FAC',\n",
+      "                                       'NORP'],\n",
       "  'support': 1274}\n"
      ]
     }
