thesaurus notebook uses cleaned labels

--- a/notebooks/Using a Thesaurus.ipynb
+++ b/notebooks/Using a Thesaurus.ipynb
@@ -33,8 +33,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading thesaurus from ../data/labels_all.jsonl\n",
-      "298071 term thesaurus imported in 146s\n"
+      "Loading thesaurus from ../data/labels_all_unambiguous_types.jsonl\n",
+      "296808 term thesaurus imported in 147s\n"
      ]
     },
     {
@@ -50,7 +50,7 @@
    ],
    "source": [
     "nlp = spacy.load(\"en_core_web_lg\")\n",
-    "thes = ThesaurusMatcher(nlp, thesaurus_path=\"../data/labels_all.jsonl\", case_sensitive=False)\n",
+    "thes = ThesaurusMatcher(nlp, thesaurus_path=\"../data/labels_all_unambiguous_types.jsonl\", case_sensitive=False)\n",
     "nlp.add_pipe(thes, before='ner')\n",
     "\n",
     "nlp.pipe_names"
@@ -92,9 +92,9 @@
      "data": {
       "text/html": [
        "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">LAENNEC STETHOSCOPE \n",
-       "<mark class=\"entity\" style=\"background: #f0d0ff; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "<mark class=\"entity\" style=\"background: #bfeeb7; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
        "    Laennec stethoscope\n",
-       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">WORK_OF_ART</span>\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">PRODUCT</span>\n",
        "</mark>\n",
        " made by \n",
        "<mark class=\"entity\" style=\"background: #aa9cfc; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
@@ -132,9 +132,9 @@
        "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">ORG</span>\n",
        "</mark>\n",
        "'s original stethoscopes, and it was presented by him to \n",
-       "<mark class=\"entity\" style=\"background: #f0d0ff; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "<mark class=\"entity\" style=\"background: #bfeeb7; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
        "    Dr\n",
-       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">WORK_OF_ART</span>\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">PRODUCT</span>\n",
        "</mark>\n",
        " \n",
        "<mark class=\"entity\" style=\"background: #aa9cfc; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
@@ -175,14 +175,14 @@
      "data": {
       "text/plain": [
        "[('Laennec stethoscope',\n",
-       "  'WORK_OF_ART',\n",
-       "  'https://collection.sciencemuseumgroup.org.uk/objects/co91292'),\n",
+       "  'PRODUCT',\n",
+       "  'https://collection.sciencemuseumgroup.org.uk/objects/co94228'),\n",
        " ('Greek',\n",
        "  'ORG',\n",
        "  'https://collection.sciencemuseumgroup.org.uk/people/cp99254'),\n",
        " ('Dr',\n",
-       "  'WORK_OF_ART',\n",
-       "  'https://collection.sciencemuseumgroup.org.uk/objects/co135433')]"
+       "  'PRODUCT',\n",
+       "  'https://collection.sciencemuseumgroup.org.uk/objects/co135430')]"
       ]
      },
      "execution_count": 5,
