import from label studio now uses path

--- a/notebooks/AAIL results.ipynb
+++ b/notebooks/AAIL results.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -216,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -225,13 +216,13 @@
        "500"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = load_text_and_annotations_from_labelstudio(\"2020-11-25-17-28-58\", nlp_lg)\n",
+    "data = load_text_and_annotations_from_labelstudio(\"../labelling/export/2020-11-25-17-28-58.zip\", nlp_lg)\n",
     "\n",
     "len(data)"
    ]
