--- a/notebooks/testing NER models.ipynb
+++ b/notebooks/testing NER models.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = load_text_and_annotations_from_labelstudio(\"2020-11-25-17-28-58\", nlp_lg)\n",
+    "data = load_text_and_annotations_from_labelstudio(\"../labelling/export/2020-11-25-17-28-58.zip\", nlp_lg)\n",
     "text, annotations = data[11]"
    ]
   },
