fix: correct end in exporting spacy labels to label studio

--- a/notebooks/Export Spacy labels to Label Studio.ipynb
+++ b/notebooks/Export Spacy labels to Label Studio.ipynb
@@ -169,7 +169,7 @@
     "                        ent.label_\n",
     "                      ],\n",
     "                      \"start\": doc[ent.start].idx,\n",
-    "                      \"end\": doc[ent.end].idx + len(doc[ent.end]) if ent.end < len(doc) else len(doc.text),\n",
+    "                      \"end\": doc[ent.end-1].idx + len(doc[ent.end-1].text),\n",
     "                      \"text\": ent.text,\n",
     "                      \"score\": 1,\n",
     "                    },\n",
