remove validate option from mapentitytypes

--- a/notebooks/AAIL results.ipynb
+++ b/notebooks/AAIL results.ipynb
@@ -298,13 +298,13 @@
     "\n",
     "# add mapping from Spacy to HC types to all pipelines\n",
     "# mapentitytypes = MapEntityTypes(nlp_lg, validate_mapping=False)\n",
-    "nlp_lg.add_pipe(\"MapEntityTypes\", config={\"validate_mapping\": False})\n",
-    "nlp_thes.add_pipe(\"MapEntityTypes\", config={\"validate_mapping\": False})\n",
-    "nlp_thes_aft.add_pipe(\"MapEntityTypes\", config={\"validate_mapping\": False})\n",
-    "nlp_thes_aft_ow.add_pipe(\"MapEntityTypes\", config={\"validate_mapping\": False})\n",
-    "nlp_dates_bef.add_pipe(\"MapEntityTypes\", config={\"validate_mapping\": False})\n",
-    "nlp_dates_bef_thes_aft.add_pipe(\"MapEntityTypes\", config={\"validate_mapping\": False})\n",
-    "nlp_dates_bef_thes_aft_ow.add_pipe(\"MapEntityTypes\", config={\"validate_mapping\": False})\n",
+    "nlp_lg.add_pipe(\"MapEntityTypes\")\n",
+    "nlp_thes.add_pipe(\"MapEntityTypes\")\n",
+    "nlp_thes_aft.add_pipe(\"MapEntityTypes\")\n",
+    "nlp_thes_aft_ow.add_pipe(\"MapEntityTypes\")\n",
+    "nlp_dates_bef.add_pipe(\"MapEntityTypes\")\n",
+    "nlp_dates_bef_thes_aft.add_pipe(\"MapEntityTypes\")\n",
+    "nlp_dates_bef_thes_aft_ow.add_pipe(\"MapEntityTypes\")\n",
     "\n",
     "nlp_lg.pipe_names, nlp_thes.pipe_names, nlp_thes_aft.pipe_names, nlp_thes_aft_ow.pipe_names, nlp_dates_bef.pipe_names, nlp_dates_bef_thes_aft.pipe_names, nlp_dates_bef_thes_aft_ow.pipe_names\n"
    ]
